templates/infra_msk_mtls.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: "PoC Stack for Managed Kafka Streaming"
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          Detault: Debugging (optional)
          Parameters:
            - EnableBastionHost
            - KeyPair

Parameters:
  ProjectName:
    Type: String
    Description: Project Name

  MSKKafkaVersion:
    Type: String
    Description: Kafka version
    Default: 2.3.1
    AllowedValues:
      - 2.2.1
      - 2.3.1
      - 2.4.1.1
      - 2.5.1
      - 2.6.0
      - 2.6.1
      - 2.7.0

  MSKInstanceType:
    Type: String
    Description: Instance type
    Default: kafka.t3.small
    AllowedValues:
      - kafka.t3.small
      - kafka.m5.large

  TLSMutualAuthentication:
    Type: String
    Default: false
    Description: Enable TLS Mutual Authentication for this cluster.
    AllowedValues:
      - true
      - false

  PCAARN:
    Type: String
    AllowedPattern: 'arn:aws:acm-pca:[us\-east\-1|us\-east\-2|eu\-west\-1]{9}:\d{12}:certificate-authority\/[\da-f]{8}-[\da-f]{4}-[\da-f]{4}-[\da-f]{4}-[\da-f]{12}|^$'
    ConstraintDescription: Not a Valid ACM PCA ARN
    Description: Provide the ARN for an ACM PCA in your account

  EC2Ami:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Description: EC2 AMI ID
    Default: "/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2"

  ClusterName:
    Type: String
    Description: Amazon MSK Cluster Name

  VpcCIDR:
    Description: Please enter the CIDR IP range (*.*.*.*/*) for this VPC
    Type: String
    Default: 10.0.0.0/16

  PublicSubnet1CIDR:
    Description: Please enter the CIDR IP range (*.*.*.*/*) for the public subnet in the first Availability Zone
    Type: String
    Default: 10.0.0.0/19

  PublicSubnet2CIDR:
    Description: Please enter the CIDR IP range (*.*.*.*/*) for the public subnet in the second Availability Zone
    Type: String
    Default: 10.0.32.0/19

  PrivateSubnet1CIDR:
    Description: Please enter the CIDR IP range (*.*.*.*/*) for the private subnet in the first Availability Zone
    Type: String
    Default: 10.0.64.0/19

  PrivateSubnet2CIDR:
    Description: Please enter the CIDR IP range (*.*.*.*/*) for the private subnet in the second Availability Zone
    Type: String
    Default: 10.0.96.0/19

  # Debugging (optional)

  EnableBastionHost:
    AllowedValues:
      - "true"
      - "false"
    Default: "false"
    Description: "if true it enables a bastion host for debugging"
    Type: String

  KeyPair:
    Type: AWS::EC2::KeyPair::KeyName
    Description: "EC2 Key Pair to allow SSH access to the bastion host"

Conditions:
  EnableBastionHost: !Equals
    - !Ref EnableBastionHost
    - "true"
  MTLS: !Equals [ !Ref TLSMutualAuthentication, true ]
  noMTLS: !Equals [ !Ref TLSMutualAuthentication, false ]

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Ref ProjectName

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Ref ProjectName

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [0, !GetAZs ""]
      CidrBlock: !Ref PublicSubnet1CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName} Public Subnet (AZ1)"

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [1, !GetAZs ""]
      CidrBlock: !Ref PublicSubnet2CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName} Public Subnet (AZ2)"

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [0, !GetAZs ""]
      CidrBlock: !Ref PrivateSubnet1CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName} Private Subnet (AZ1)"

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [1, !GetAZs ""]
      CidrBlock: !Ref PrivateSubnet2CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName} Private Subnet (AZ2)"

  MSKClusterMTLS:
    Type: AWS::MSK::Cluster
    Condition: MTLS
    Properties:
      ClusterName: !Ref ClusterName
      KafkaVersion: !Ref MSKKafkaVersion
      NumberOfBrokerNodes: 2
      EnhancedMonitoring: PER_TOPIC_PER_BROKER
      EncryptionInfo:
        EncryptionInTransit:
          ClientBroker: TLS_PLAINTEXT
          InCluster: true
        ClientAuthentication:
          Tls:
            CertificateAuthorityArnList:
              - !Ref PCAARN
      OpenMonitoring:
        Prometheus:
          JmxExporter:
            EnabledInBroker: "true"
          NodeExporter:
            EnabledInBroker: "true"
      BrokerNodeGroupInfo:
        BrokerAZDistribution: DEFAULT
        InstanceType: !Ref MSKInstanceType
        SecurityGroups:
          - !Ref MSKSecurityGroup
        StorageInfo:
          EBSStorageInfo:
            VolumeSize: 100
        ClientSubnets:
          - !Ref PrivateSubnet1
          - !Ref PrivateSubnet2

  MSKClusterNoMTLS:
    Type: AWS::MSK::Cluster
    Condition: noMTLS
    Properties:
      ClusterName: !Ref ClusterName
      KafkaVersion: !Ref MSKKafkaVersion
      NumberOfBrokerNodes: 2
      EnhancedMonitoring: PER_TOPIC_PER_BROKER
      EncryptionInfo:
        EncryptionInTransit:
          ClientBroker: TLS_PLAINTEXT
          InCluster: true
      OpenMonitoring:
        Prometheus:
          JmxExporter:
            EnabledInBroker: "true"
          NodeExporter:
            EnabledInBroker: "true"
      BrokerNodeGroupInfo:
        BrokerAZDistribution: DEFAULT
        InstanceType: !Ref MSKInstanceType
        SecurityGroups:
          - !Ref MSKSecurityGroup
        StorageInfo:
          EBSStorageInfo:
            VolumeSize: 100
        ClientSubnets:
          - !Ref PrivateSubnet1
          - !Ref PrivateSubnet2

  MSKSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Security group for the MSK Cluster"
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 2181
          ToPort: 2181
          CidrIp: !Ref VpcCIDR
        - IpProtocol: tcp
          FromPort: 9094
          ToPort: 9094
          CidrIp: !Ref VpcCIDR
        - IpProtocol: tcp
          FromPort: 9092
          ToPort: 9092
          CidrIp: !Ref VpcCIDR

  NatGateway1EIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc

  NatGateway2EIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc

  NatGateway1:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGateway1EIP.AllocationId
      SubnetId: !Ref PublicSubnet1

  NatGateway2:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGateway2EIP.AllocationId
      SubnetId: !Ref PublicSubnet2

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName} Public Routes"

  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2

  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName} Private Routes (AZ1)"

  DefaultPrivateRoute1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway1

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId: !Ref PrivateSubnet1

  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName} Private Routes (AZ2)"

  DefaultPrivateRoute2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway2

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      SubnetId: !Ref PrivateSubnet2

  CloudMapNamespace:
    Type: AWS::ServiceDiscovery::PrivateDnsNamespace
    Properties:
      Name: !Sub "content.local"
      Vpc: !Ref VPC

  BastionSecurityGroup:
    Condition: EnableBastionHost
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Allows SSH access"
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

  Bastion:
    Condition: EnableBastionHost
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref EC2Ami
      InstanceType: t2.micro
      KeyName: !Ref KeyPair
      SecurityGroupIds:
        - !Ref BastionSecurityGroup
      SubnetId: !Ref PublicSubnet1

Outputs:
  VPC:
    Description: A reference to the created VPC
    Value: !Ref VPC
    Export:
      Name: !Sub
        - "${ProjectName}:VPC"
        - { ProjectName: !Ref ProjectName}

  PublicSubnet1:
    Description: A reference to the public subnet in the 1st Availability Zone
    Value: !Ref PublicSubnet1
    Export:
      Name: !Sub
        - "${ProjectName}:PublicSubnet1"
        - { ProjectName: !Ref ProjectName}

  PublicSubnet2:
    Description: A reference to the public subnet in the 2nd Availability Zone
    Value: !Ref PublicSubnet2
    Export:
      Name: !Sub
        - "${ProjectName}:PublicSubnet2"
        - { ProjectName: !Ref ProjectName}

  PrivateSubnet1:
    Description: A reference to the private subnet in the 1st Availability Zone
    Value: !Ref PrivateSubnet1
    Export:
      Name: !Sub
        - "${ProjectName}:PrivateSubnet1"
        - { ProjectName: !Ref ProjectName}

  PrivateSubnet2:
    Description: A reference to the private subnet in the 2nd Availability Zone
    Value: !Ref PrivateSubnet2
    Export:
      Name: !Sub
        - "${ProjectName}:PrivateSubnet2"
        - { ProjectName: !Ref ProjectName}

  VpcCIDR:
    Description: VPC CIDR
    Value: !Ref VpcCIDR
    Export:
      Name: !Sub
        - "${ProjectName}:VpcCIDR"
        - { ProjectName: !Ref ProjectName}

  CloudMapNamespaceId:
    Description: The id of to the Cloud Map namespace
    Value: !GetAtt CloudMapNamespace.Id
    Export:
      Name: !Sub
        - "${ProjectName}:CloudMapNamespaceId"
        - { ProjectName: !Ref ProjectName}

  BastionIp:
    Condition: EnableBastionHost
    Description: The ip address of the bastion host
    Value: !GetAtt Bastion.PublicIp
    Export:
      Name: !Sub
        - "${ProjectName}:BastionIp"
        - { ProjectName: !Ref ProjectName}

  MSKClusterArn:
    Description: The Arn for the MSKMMCluster MSK cluster
    Value: !Ref MSKCluster

  MSKSecurityGroupID:
    Description: The ID of the security group created for the MSK clusters
    Value: !GetAtt
      - MSKSecurityGroup
      - GroupId
